--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,35 @@
 @import "tailwindcss";
+
+/* Font faces */
+@font-face {
+  font-family: "SamsungSharp";
+  src: url("./Fonts/samsungsharpsans.otf") format("opentype");
+  font-weight: 500;
+}
+
+@font-face {
+  font-family: "SamsungSharp";
+  src: url("./Fonts/samsungsharpsans-medium.otf") format("opentype");
+  font-weight: 500;
+}
+
+@font-face {
+  font-family: "SamsungSharp";
+  src: url("./Fonts/samsungsharpsans-bold.otf") format("opentype");
+  font-weight: 700;
+}
+
+/* Custom Tailwind utility */
+@layer utilities {
+  .font-samsung {
+    font-family: "SamsungSharp", sans-serif;
+  }
+}
+
+
+.inter-500 {
+    font-family: "Inter", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 500;
+    font-style: normal;
+  }
