--- a/src/index.css
+++ b/src/index.css
@@ -33,3 +33,9 @@
     font-weight: 500;
     font-style: normal;
   }
+.inter-400 {
+    font-family: "Inter", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
+  }
