--- a/src/index.css
+++ b/src/index.css
@@ -39,3 +39,15 @@
     font-weight: 400;
     font-style: normal;
   }
+  @keyframes zoomInOut {
+  0%, 100% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.08);
+  }
+}
+
+.auto-zoom {
+  animation: zoomInOut 2s ease-in-out infinite;
+}
